--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "webpack-cli": "^5.1.4"
   }
 }
