--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "firebase-tools": "^12.4.5",
     "postcss": "^8.4.26",
+    "prettier": "3.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.0",
     "webpack-cli": "^5.1.4"
