--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
@@ -29,7 +31,7 @@
     "postcss": "^8.4.26",
     "prettier": "3.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.0",
+    "vite": "^4.4.9",
     "webpack-cli": "^5.1.4"
   }
 }
